# mutants

./: .travis.yml  README.md  setup.cfg
mutants/: __init__.py  classhopper_mutant.py  immutable_mutant.py  on_access_mutant.py  special_methods.py
tests/: test_classhopper_mutant.py  test_immutable_mutant.py  test_many_objects.py  test_on_access_mutant.py
