[metadata]
name = mutants
author = Alexander Sosedkin
author-email = monk@unboiled.info
summary = mutants, a Python library for objects that mutate on access
description-file = README.md
home-page = https://github.com/t184256/mutants
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
keywords =
    hacks
    mutants
    proxy object

requires-python = >=3.3
setup_requires_dist =
    pbr>=1.9
    setuptools>=17.1
tests_require =
    nose>=1.0

[files]
packages =
    mutants

[extras]
test = nose>=1.0
